[gd_scene load_steps=27 format=3 uid="uid://bnol5so1ev2tb"]

[ext_resource type="Script" path="res://enemy.gd" id="1_x5ucr"]
[ext_resource type="AudioStream" uid="uid://b4vt2efwa80k7" path="res://sounds/hitHurt.wav" id="2_d4ehm"]
[ext_resource type="Shader" path="res://hit_flash.gdshader" id="3_8e8v6"]
[ext_resource type="Texture2D" uid="uid://cwlij5qwegpty" path="res://sprites/enemy.png" id="4_gmmwp"]
[ext_resource type="Texture2D" uid="uid://7mkrlcjkgxkk" path="res://sprites/enemy_hit.png" id="5_cdncj"]
[ext_resource type="Script" path="res://hitbox_component.gd" id="6_dy7j0"]
[ext_resource type="Script" path="res://knockback_component.gd" id="7_knq2e"]
[ext_resource type="Script" path="res://hurtbox_component.gd" id="8_mhg51"]
[ext_resource type="Script" path="res://health_component.gd" id="9_3yyki"]
[ext_resource type="Script" path="res://knockable_component.gd" id="10_82tbl"]
[ext_resource type="Script" path="res://velocity_component.gd" id="11_a1cxh"]
[ext_resource type="Script" path="res://hit_flash_component.gd" id="12_kpnpu"]
[ext_resource type="PackedScene" uid="uid://b8fgwm6nhyjfc" path="res://healthbar.tscn" id="13_cruy2"]
[ext_resource type="Script" path="res://bounce_component.gd" id="14_enlky"]
[ext_resource type="Script" path="res://toggleable.gd" id="15_6m46l"]
[ext_resource type="Script" path="res://movement_component.gd" id="16_d57il"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dim6m"]
size = Vector2(4, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h34eh"]
resource_local_to_scene = true
shader = ExtResource("3_8e8v6")
shader_parameter/active = false
shader_parameter/r = 1.0
shader_parameter/g = 1.0
shader_parameter/b = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_hthlf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_gmmwp")
}, {
"duration": 1.0,
"texture": ExtResource("5_cdncj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hc7r8"]

[sub_resource type="Curve" id="Curve_p85g6"]
max_value = 100.0
_data = [Vector2(0.0159744, 18.8535), 0.0, 0.0, 0, 0, Vector2(1, 56.9427), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_slv5o"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.990415, 0.271338), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_pqwyt"]
max_value = 100.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.99361, 15.5414), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_lqh34"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.99361, 0.34586), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pdin5"]
size = Vector2(5, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hk3ai"]
size = Vector2(12, 18)

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("velocity_component", "knockable_component")]
collision_layer = 8
collision_mask = 10
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_x5ucr")
velocity_component = NodePath("VelocityComponent")
knockable_component = NodePath("KnockableComponent")
hit_sound = ExtResource("2_d4ehm")
wander_range = Vector2(60, 60)
detection_range = 200.0

[node name="MovementCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_dim6m")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_h34eh")
sprite_frames = SubResource("SpriteFrames_hthlf")
speed_scale = 0.0

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 2

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_hc7r8")

[node name="HitParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
local_coords = true
direction = Vector2(-1, 0)
spread = 30.0
gravity = Vector2(0, 100)
initial_velocity_min = 50.0
initial_velocity_max = 130.0
damping_min = 2.0
damping_max = 8.0
damping_curve = SubResource("Curve_p85g6")
scale_amount_min = 0.5
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_slv5o")
color = Color(1, 0.117647, 0.235294, 1)

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 18
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 1.0
local_coords = true
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 70.0
initial_velocity_max = 100.0
damping_max = 50.0
damping_curve = SubResource("Curve_pqwyt")
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_lqh34")
color = Color(1, 0.117647, 0.235294, 1)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 40.0
neighbor_distance = 40.0
max_neighbors = 1
avoidance_layers = 8
avoidance_mask = 8

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -11.5
offset_right = 49.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "WANDERING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 8
script = ExtResource("6_dy7j0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_pdin5")

[node name="KnockbackComponent" type="Area2D" parent="."]
collision_layer = 8
script = ExtResource("7_knq2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KnockbackComponent"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_pdin5")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "hit_particles")]
collision_layer = 8
script = ExtResource("8_mhg51")
health_component = NodePath("../HealthComponent")
hit_sound = ExtResource("2_d4ehm")
hit_particles = NodePath("../HitParticles")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_hk3ai")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("9_3yyki")

[node name="KnockableComponent" type="Area2D" parent="." node_paths=PackedStringArray("velocity_component")]
collision_layer = 8
script = ExtResource("10_82tbl")
velocity_component = NodePath("../VelocityComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KnockableComponent"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_hk3ai")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("11_a1cxh")

[node name="HitFlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("12_kpnpu")
sprite = NodePath("../Sprite")

[node name="Healthbar" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("13_cruy2")]
offset_left = -12.0
offset_top = -16.0
offset_right = 13.0
offset_bottom = -11.0
health_component = NodePath("../HealthComponent")

[node name="BounceComponent" type="Node2D" parent="." node_paths=PackedStringArray("velocity_component", "movement_component")]
script = ExtResource("14_enlky")
velocity_component = NodePath("../VelocityComponent")
movement_component = NodePath("../MovementComponent")
velocity_decrease_on_bounce = 40.0

[node name="Toggleable" type="Node" parent="BounceComponent"]
script = ExtResource("15_6m46l")

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("body", "velocity_component")]
script = ExtResource("16_d57il")
body = NodePath("..")
velocity_component = NodePath("../VelocityComponent")

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="hit" from="HurtboxComponent" to="HitFlashComponent" method="flash"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="on_knocked_changed" from="KnockableComponent" to="." method="_on_knockable_component_on_knocked_changed"]
