[gd_scene load_steps=2 format=3 uid="uid://bqyn4sh5fnp4e"]

[ext_resource type="Script" path="res://hurtbox_component.gd" id="1_2jkce"]

[node name="HurtboxComponent" type="Area2D"]
script = ExtResource("1_2jkce")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
